# ujiindoorloc-capstone

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SUMMARY.md  pyproject.toml
Elements of AI - Full Course/: Module 2.Sculpturing the Feature Space.pptx
Elements of AI - Full Course/Hands-on/: EAI Solutions for Practicum 2.1 EDA and Model Selection.R  EAI Solutions for Practicum 2.2 Predictive Modeling with Regression.R
Elements of AI - Full Course/Labs/: EAI Practicum 1.1 Get Ready for FIFA 22.html  EAI Practicum 1.2 EDA and Hypothesis Testing.html  EAI Practicum 1.3 Cleaning Raw Data.html  EAI Practicum 2.1 EDA and Model Selection.html  EAI Practicum 2.2 Predictive Modeling with Regression.html  EAI Practicum 2.3 Classification Problems.html  EAI-Practicum-2.4-Unsupervised-Learning.html  EIA-Lab-2.3-Classification-Problems-II.html
Elements of AI - Full Course/Tutorials/: Tidyverse Tutorials 1.1 Machine Learning Toolbox.html  Tidyverse-Tutorials-1.2-R-Programming-Language.html  Tidyverse-Tutorials-2.1-Atomic-Vectors.html  Tidyverse-Tutorials-2.2-Rectangular-Data.html  Tidyverse-Tutorials-2.3-Recursive-Vectors-and-Data-Frames.html  Tidyverse-Tutorials-2.4-Loading-Data-into-R.html  Tidyverse-Tutorials-3.1-Functions.html  Tidyverse-Tutorials-3.2-Lexical-Scoping--Intermediate-.html  (+7 more)
notebooks/: 00_project_overview.ipynb  01_data_audit_and_eda.ipynb  02_preprocessing_and_targets.ipynb  03_scenario_2_model_comparison.ipynb  04_scenario_5_dimensionality_reduction.ipynb  05_final_comparison_and_interpretation.ipynb
scripts/: build_notebooks.py
src/ujiindoorloc/: eda.py  (+9 more)
(+39 files in other folders)
