[project]
name = "ujiindoorloc-capstone"
version = "0.1.0"
description = "Indoor building/floor classification from UJIIndoorLoc WiFi fingerprints (FIIT OZNAL capstone)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "pyarrow>=15.0",
    "joblib>=1.3",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ujiindoorloc"]

[tool.hatch.metadata]
allow-direct-references = true
